--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jschmidaguerre.github.io/portfolio-react/",
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
@@ -44,6 +45,5 @@
   "devDependencies": {
     "gh-pages": "^6.2.0",
     "tailwindcss": "^3.4.4"
-  },
-  "homepage": "https://jschmidaguerre.github.io/portfolio-react/"
+  }
 }
