--- a/package.json
+++ b/package.json
@@ -45,5 +45,9 @@
   "devDependencies": {
     "gh-pages": "^6.2.0",
     "tailwindcss": "^3.4.4"
-  }
+  },
+  "main": "tailwind.config.js",
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
